--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
 		<spring.version>5.1.2.RELEASE</spring.version>
 		<junit.version>4.11</junit.version>
 		<log4j.version>1.2.17</log4j.version>
-		<sonar.host.url>http://54.242.85.29:9000/</sonar.host.url>
+		<sonar.host.url>http://54.147.148.38:9000/</sonar.host.url>
 		<sonar.login>admin</sonar.login>
 		<sonar.password>admin</sonar.password>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -103,13 +103,13 @@
 	    <snapshotRepository>
 	      <id>nexus</id>
 	      <name>Landmark Technologies Snapshot Nexus Repository </name>
-	      <url>http://34.236.143.52:8081/repository/master-card-SS/</url>
+	      <url>http://54.87.46.214:8081/repository/master-card-SS/</url>
 	    </snapshotRepository>
 	    
 	</distributionManagement>
 	
 	<build>
-		<finalName>Paypal-web-app</finalName>
+		<finalName>Alexia-web</finalName>
 		
 		<plugins>
 			<plugin>
