--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
 	<version>0.0.1-SNAPSHOT</version>
 	
 	<name>maven-web-application</name>
-	<!-- ghghgh -->
+
 
 	<description>Maven Web Project for Java Project</description>
 
@@ -96,13 +96,13 @@
 	
 	<distributionManagement>
 	    <repository>
-	      <id>maks</id>
+	      <id>nexus</id>
 	      <name>Landmark Technologies Releases Nexus Repository</name>
 	      <url>http://54.87.46.214:8081/repository/master-card-RELEASE/</url>
 	    </repository>
 	    
 	    <snapshotRepository>
-	      <id>maks</id>
+	      <id>nexus</id>
 	      <name>Landmark Technologies Snapshot Nexus Repository </name>
 	      <url>http://54.160.165.218:8081/repository/Ace_Group/</url>
 	    </snapshotRepository>
