--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
 	<description>Maven Web Project for Java Project</description>
 
 	<organization>
-		<name>Landmark Technologies</name>
+		<name>ACE Technologies</name>
 		<url>http://landmarktechnologies.com/</url>
 	</organization>
 
@@ -110,7 +110,7 @@
 	</distributionManagement>
 	
 	<build>
-		<finalName>Alexia-is-here</finalName>
+		<finalName>Welcome Alexia</finalName>
 		
 		<plugins>
 			<plugin>
