--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,7 @@
 		<spring.version>5.1.2.RELEASE</spring.version>
 		<junit.version>4.11</junit.version>
 		<log4j.version>1.2.17</log4j.version>
-		<sonar.host.url>http://54.157.202.27:9000/</sonar.host.url>
+		<sonar.host.url>http://54.82.127.221:9000/</sonar.host.url>
 		<sonar.login>admin</sonar.login>
 		<sonar.password>admin</sonar.password>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -102,9 +102,9 @@
 	    </repository>
 	    
 	    <snapshotRepository>
-	      <id>maks</id>
+	      <id>asam</id>
 	      <name>Landmark Technologies Snapshot Nexus Repository </name>
-	      <url>http://54.160.165.218:8081/repository/Ace_Group/</url>
+	      <url>http://54.173.242.57:8081/repository/asam/</url>
 	    </snapshotRepository>
 	    
 	</distributionManagement>
