--- a/pom.xml
+++ b/pom.xml
@@ -104,7 +104,7 @@
 	    <snapshotRepository>
 	      <id>asam</id>
 	      <name>Landmark Technologies Snapshot Nexus Repository </name>
-	      <url>http://54.163.34.30:8081/repository/maven-snapshots/</url>
+	      <url>http://54.163.34.30:8081/repository/Makks/</url>
 	    </snapshotRepository>
 	    
 	</distributionManagement>
